@@ -1,4 +1,8 @@
-MNEMOSYNE 0.9.2:
+MNEMOSYNE 0.9.3:
+
+- fixed obscure button labelling bug (patch by J. David Lee)
+
+MNEMOSYNE 0.9.2: 2006-03-25
 
 *** IMPORTANT UPGRADE NOTICE ***
 
